[gd_scene load_steps=11 format=3 uid="uid://bu14tom65nfce"]

[ext_resource type="Texture2D" uid="uid://dj2xj883vq8yn" path="res://Sprites/Vagina .png" id="1_it7a1"]
[ext_resource type="Script" path="res://Scripts/Vagina.gd" id="1_v1kd7"]
[ext_resource type="AudioStream" uid="uid://cf51th1v0xifk" path="res://Sounds/Vagina.wav" id="3_3cdok"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y7mdg"]
radius = 12.0

[sub_resource type="Animation" id="Animation_5y5gi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nofh8"]
resource_name = "close"
length = 6.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0, 0]
}

[sub_resource type="Animation" id="Animation_ijqhu"]
resource_name = "full"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 12]
}

[sub_resource type="Animation" id="Animation_hf1ya"]
resource_name = "low"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_vqfud"]
resource_name = "open"
length = 6.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gw24p"]
_data = {
"RESET": SubResource("Animation_5y5gi"),
"close": SubResource("Animation_nofh8"),
"full": SubResource("Animation_ijqhu"),
"low": SubResource("Animation_hf1ya"),
"open": SubResource("Animation_vqfud")
}

[node name="Vagina" type="Area2D" groups=["Vagina"]]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_v1kd7")

[node name="Coli" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y7mdg")
metadata/_edit_lock_ = true

[node name="Img" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_it7a1")
hframes = 13
metadata/_edit_lock_ = true

[node name="Anima" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gw24p")
}
speed_scale = 6.0

[node name="Iniciador" type="Timer" parent="."]

[node name="Audio" type="AudioStreamPlayer2D" parent="." groups=["Audio"]]
stream = ExtResource("3_3cdok")
volume_db = 6.0
metadata/_edit_lock_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Anima" to="." method="_on_anima_animation_finished"]
[connection signal="timeout" from="Iniciador" to="." method="_on_iniciador_timeout"]
